== 0.5.3 / 2009-11-27

* Bug fixes

  * Fix cookie matching for subdomains (Marcin Kulik)

== 0.5.2 / 2009-11-13

* Bug fixes

  * Call close on response body after iteration, not before (Simon Rozet)
  * Add missing require for time in cookie_jar.rb (Jerry West)

== 0.5.1 / 2009-10-27

* Bug fixes

  * Escape cookie values (John Pignata)
  * Close the response body after each request, as per the Rack spec (Elomar França)

== 0.5.0 / 2009-09-19

* Bug fixes

  * Set HTTP_X_REQUESTED_WITH in the Rack env when a request is made with :xhr => true (Ben Sales)
  * Set headers in the Rack env in HTTP_USER_AGENT form
  * Rack::Test now generates no Ruby warnings

== 0.4.2 / 2009-09-01

* Minor enhancements

  * Merge in rack/master's build_multipart method which covers additional cases
  * Accept raw :params string input and merge it with the query string
  * Stringify and upcase request method (e.g. :post => "POST") (Josh Peek)

* Bug fixes

  * Properly convert hashes with nil values (e.g. :foo => nil becomes simply "foo", not "foo=")
  * Prepend a slash to the URI path if it doesn't start with one (Josh Peek)
  * Requiring Rack-Test never modifies the Ruby load path anymore (Josh Peek)
  * Fixed using multiple cookies in a string on Ruby 1.8 (Tuomas Kareinen and Hermanni Hyytiälä)

== 0.4.1 / 2009-08-06

* Minor enhancements

  * Support initializing a Rack::Test::Session with an app in addition to
    a Rack::MockSession
  * Allow CONTENT_TYPE to be specified in the env and not overwritten when
    sending a POST or PUT

== 0.4.0 / 2009-06-25

* Minor enhancements

  * Expose hook for building Rack::MockSessions for frameworks that need
    to configure them before use
  * Support passing in arrays of raw cookies in addition to a newline
    separated string
  * Support after_request callbacks in MockSession for things like running
    background jobs
  * Allow multiple named sessions using with_session