@@ -1,3 +1,9 @@
+== Git
+
+* Bug fixes
+
+  * Handle parameter names with brackets properly (Tanner Donovan)
+
 == 0.5.3 / 2009-11-27
 
 * Bug fixes
